# fiap-postech-fase_1-cap2.intcvm-projeto_final-ciclo_completo_de_ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fix_accents.py  pdf_text.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  contributing.md  data-dictionary.md  deployment.md  entrega-final.md  mlflow-tracking.md  model-card.md  model-risk.md  monitoring.md
docs/decisions/: README.md  fairness-policy.md  fairness-region.md  latency-target.md  mvp-baseline.md  release-gate-policy.md  retraining-trigger-policy.md  target-definition.md  threshold-policy.md
plan/: FIAP-MLEng-Fase-1-cap2-guia-execucao-projeto-final-mlops.md  etapa-1-backlog-executavel.md  etapa-1-summary.md  etapa-2-backlog-executavel.md  etapa-2-summary.md  etapa-3-backlog-executavel.md  etapa-3-summary.md  etapa-4-backlog-executavel.md  etapa-4-summary.md  etapa-5-backlog-executavel.md  etapa-5-summary.md  etapa-6-backlog-executavel.md  etapa-6-summary.md  projeto-final-summary-executivo.md
src/: __init__.py  config.py  tracking.py
src/data/: __init__.py  dataset.py  dictionary.py  ingest_mod.py  schema.py
src/evaluation/: evaluate.py  fairness.py  gates.py  metrics.py  reports.py  risk.py
src/features/: __init__.py  build_features.py  preprocessing.py
src/models/: __init__.py  baseline.py  io.py  registry.py  release.py  train.py
src/monitoring/: contracts.py  data_quality.py  drift.py  reference.py  reporting.py  run_monitoring.py  store.py  triggers.py
src/serving/: __init__.py  app.py  model_store.py  (+3 more)
tests/: conftest.py
(+49 files in other folders)
